Added everything except requirments

--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -1044,20 +1044,142 @@ p {
                   follow you as you scroll down the page.
                 </p>
                 <a id="navhtml"><h2>&lt;HTML&gt;</h2></a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="paraSection">
+                  <div class="CodeBoxL">
+                    <pre class="prettyprint linenums lang-html CodeBoxBuffer">
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+  &lt;head&gt;
+  &lt;link rel="stylesheet" type="text/css" href="stylesheet/stylesheet.css">
+    &lt;meta charset="utf-8"&gt;
+    &lt;title&gt;My Website!&lt;/title&gt;
+  &lt;/head&gt;
+  &lt;body&gt;
+
+    &lt;div class="navbar">
+      &lt;a href="#">Home&lt;/a>
+      &lt;a href="#">News&lt;/a>
+      &lt;a href="#">Contact&lt;/a>
+    &lt;/div>
+
+    &lt;div class="main">
+      &lt;h1>Fixed Top Menu&lt;/h1>
+      &lt;h2>Scroll this page to see the effect&lt;/h2>
+      &lt;h3>The navagation bar will start at the
+             top of the page while scrolling&lt;/h3>
+
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+      &lt;p>Some text Some text Some text Some text ...&lt;/p>
+    &lt;/div>
+
+  &lt;/body&gt;
+&lt;/html&gt;
+</pre>
+                  </div>
+                </div>
                 <a id="navcss"><h2>&lt;CSS&gt;</h2></a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                  consequat.
-                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="paraSection">
+                  <div class="CodeBoxL">
+                    <pre class="prettyprint linenums lang-css CodeBoxBuffer">
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background: #ddd;
+  color: black;
+}
+
+.main {
+  padding: 16px;
+  margin-top: 30px;
+  height: 1500px;
+}</pre>
+                  </div>
+                </div>
+                <p>Pay special attention to where classes are.</p>
+                <p>See the :hover? That is a common CSS rule to change properties based on whether an element
+                is being hovered over or not.
+                </p>
+                <p>Also notice the CSS rule .navbar a, this means that it will only affect the anchor elements that
+                  are inside the .navbar class. If you were to create an anchor tag somewhere else, it wouldn’t
+                  look like the one in your header.</p>
+                <p>There are many other elements in here, can you figure out what they all mean? (We will
+                  expand more on this in a web development specific course).</p>
+
                 <a id="requirements"><h2><codeB>Requirements</codeB></h2></a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                  consequat.
-                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Now that we’ve gone over all the basic aspects of a basic HTML/CSS website, you are going to
+make a website based on whatever you would like! The requirements of this project are as
+follows:</p>
+<ol>
+  <li></li>
+  <ol>
+    <li></li>
+    <li></li>
+  </ol>
+  <li></li>
+  <li></li>
+  <ol>
+    <li></li>
+  </ol>
+  <li></li>
+  <ol>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ol>
+  <li></li>
+  <li></li>
+  <li></li>
+  <ol>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ol>
+</ol>
+<p>Pages must look nice and flow well together, this must look like one big project and not just a
+bunch of random elements put together.
+</p>
+<p> <a href="https://www.w3schools.com/"><u>W3Schools</u> </a> is a great resource to see what you can do in your
+website. Highly recommended you give it a check</p>
                 <a id="challenges"><h2><codeR>Challenges</codeR></h2></a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                  consequat.
-                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>None yet!</p>
               </section>
             </article>
           </div>
@@ -1068,7 +1190,7 @@ p {
 
     <footer class="nav-footer" id="footer">
       <section class="sitemap">
-        <div>
+        <!-- <div>
           <h5><a href="#">Lorem</a></h5>
           <a href="#">Lorem</a>
         </div>
@@ -1079,7 +1201,7 @@ p {
         <div>
           <h5><a href="#">Lorem</a></h5>
           <a href="#">Lorem</a>
-        </div>
+        </div> -->
         <!-- <section class="copyright">Copyright © 2018 Facebook Inc.</section> -->
     </footer>
   </div>
