Finished all except challenges

--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -1145,32 +1145,35 @@ p {
 make a website based on whatever you would like! The requirements of this project are as
 follows:</p>
 <ol>
-  <li></li>
+  <li>Website must use proper file hierarchy and structure</li>
   <ol>
-    <li></li>
-    <li></li>
+    <li>First page index.html</li>
+    <li>css and images folder</li>
   </ol>
-  <li></li>
-  <li></li>
+  <li>Website must have a title tag</li>
+  <li>Add a floating header</li>
   <ol>
-    <li></li>
+    <li>Have at least one styled button on it</li>
   </ol>
-  <li></li>
+  <li>Body of website must include the following</li>
   <ol>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>One header and one paragraph tag</li>
+    <li>Bold or italicize at least one word</li>
+    <li>A list (either ordered or unordered)</li>
+    <li>One line break</li>
+    <li>One image</li>
+    <li>One table</li>
   </ol>
-  <li></li>
-  <li></li>
-  <li></li>
+  <li>
+    Must have more than one page (second page just needs to follow proper html structure,
+    you don’t need to make it as complicated as the main page unless you want to).
+</li>
+  <li>Have your CSS file separate and placed in the appropriate folder</li>
+  <li>Other CSS requirements</li>
   <ol>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Have one proper use of a class</li>
+    <li>Have one proper use of an id</li>
+    <li>Style an element that is neither of the above (body would be a good one)</li>
   </ol>
 </ol>
 <p>Pages must look nice and flow well together, this must look like one big project and not just a
@@ -1206,5 +1209,4 @@ website. Highly recommended you give it a check</p>
     </footer>
   </div>
 </body>
-
 </html>
