Updated PNG's caps

--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -181,7 +181,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/newfolder.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/newfolder.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -197,7 +197,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/firstwebsite.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/firstwebsite.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -223,7 +223,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/newtext.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/newtext.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -236,7 +236,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/indexhtml.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/indexhtml.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -261,7 +261,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/openwith.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/openwith.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -278,7 +278,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/sublime.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/sublime.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -308,7 +308,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/helloworld.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/helloworld.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -353,7 +353,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/helloworldtitle.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/helloworldtitle.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -407,7 +407,7 @@
 &lt;/html&gt;</pre>
                   </div>
                   <div class="tutImageContainer">
-                    <img class="tutImage" src="examples/images/headers.png" alt=""></img>
+                    <img class="tutImage" src="examples/images/headers.PNG" alt=""></img>
                   </div>
                 </div>
                 <br>
@@ -446,7 +446,7 @@
 &lt;/html&gt;</pre>
                   </div>
                   <div class="tutImageContainer">
-                    <img class="tutImage" src="examples/images/paraexample.png" alt=""></img>
+                    <img class="tutImage" src="examples/images/paraexample.PNG" alt=""></img>
                   </div>
                 </div>
                 <br>
@@ -485,7 +485,7 @@
 &lt;/html&gt;</pre>
                   </div>
                   <div class="tutImageContainer">
-                    <img class="tutImage" src="examples/images/textformatting.png" alt=""></img>
+                    <img class="tutImage" src="examples/images/textformatting.PNG" alt=""></img>
                   </div>
                 </div>
                 <br>
@@ -533,7 +533,7 @@
 &lt;/html&gt;</pre>
                   </div>
                   <div class="tutImageContainer">
-                    <img class="tutImage" src="examples/images/lists.png" alt=""></img>
+                    <img class="tutImage" src="examples/images/lists.PNG" alt=""></img>
                   </div>
                 </div>
                 <br>
@@ -596,7 +596,7 @@
 &lt;/html&gt;</pre>
                   </div>
                   <div class="tutImageContainer">
-                    <img class="tutImage" src="examples/images/table.png" alt=""></img>
+                    <img class="tutImage" src="examples/images/table.PNG" alt=""></img>
                   </div>
                 </div>
                 <br>
@@ -637,7 +637,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/imageone.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/imageone.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -650,7 +650,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/imagetwo.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/imagetwo.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -668,7 +668,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/renameimage.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/renameimage.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -692,7 +692,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/walleimage.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/walleimage.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -740,7 +740,7 @@
                     </div>
                     <div class="fm img-s">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/link.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/link.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -768,7 +768,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/secondpageone.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/secondpageone.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -890,7 +890,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/cssone.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/cssone.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -910,7 +910,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/csstwo.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/csstwo.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -984,7 +984,7 @@ p {
                   </div>
                   <div class="para">
                     <div class="tutImageContainer">
-                      <img class="tutImage" src="examples/images/cssstart.png" alt=""></img>
+                      <img class="tutImage" src="examples/images/cssstart.PNG" alt=""></img>
                     </div>
                   </div>
                   <p>
@@ -1032,7 +1032,7 @@ p {
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/advancedcss.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/advancedcss.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -1084,7 +1084,7 @@ p {
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/advancedcss.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/advancedcss.PNG" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -1294,7 +1294,8 @@ p {
           <h5><a href="#">Lorem</a></h5>
           <a href="#">Lorem</a>
         </div> -->
-        <!-- <section class="copyright">Copyright © 2018 Facebook Inc.</section> -->
+        <!-- <section class="copyright">Copyright © 2018 Facebook Inc. -->
+        </section>
     </footer>
   </div>
 </body>
