--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -181,7 +181,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/newfolder.PNG" alt=""></img>
+                        <img class="tutImage" src="examples/images/newfolder.png" alt=""></img>
                       </div>
                     </div>
                   </div>
@@ -197,7 +197,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/firstwebsite.PNG" alt=""></img>
+                        <img class="tutImage" src="examples/images/firstwebsite.png" alt=""></img>
                       </div>
                     </div>
                   </div>
