--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -325,7 +325,7 @@
                   “index.html”
                 </p>
               </section>
-
+              <!-- ^ Cleaned -->
               <section id="section_BODY">
                 <a id="_BODY">
                   <h2>
