--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="../../js/toc.js"></script>
   <script type="text/javascript" src="../../js/question.js"></script>
   <script type="text/javascript" src="../../js/smoothscroll.js"></script>
-  <script type="text/javascript" src="../../js/interact.js"></script>
+  <!-- <script type="text/javascript" src="../../js/interact.js"></script> -->
   <link rel="stylesheet" href="../../css/styles.css">
   <link rel="stylesheet" href="../../css/prettyPrint.css">
 </head>
@@ -372,17 +372,6 @@
                   </div>
                 </div>
                 <br>
-                <div class="interactContainer">
-                  <div class="interact">
-                      <h1>Hover over to see how it's made!</h1>
-                  </div>
-                  <div class="interact">
-                    <h2>Hover over to see how it's made!</h2>
-                  </div>
-                  <div class="interact">
-                    <p>Test1</p>
-                  </div>
-                </div>
                 <p>
                   Remember that your code must be in between the
                   <code>&lt;body&gt;&lt;/body&gt;</code> tags.
