--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -282,14 +282,14 @@
                 <p>
                   The code on the image to the right is your standard HTML structure. <br>
                   <!DOCTYPE html> specifies you are using HTML5 (the latest version of HTML). <br>
-                  <code>&lt;html>&lt;/html></code> code between here is HTML code (as opposed to CSS, Javascript, etc) <br>
-                  <code>&lt;head>&lt;/head></code> code between these tags are your “meta” information <br>
-                  <code>&lt;meta charset=”utf-8”></code> allows special characters not found on every keyboard. <br>
-                  <code>&lt;body>&lt;/body></code> where your primary code goes. When you were doing CodeCombat, you were
+                  <code class="prettifyHTML">&lt;html>&lt;/html></code> code between here is HTML code (as opposed to CSS, Javascript, etc) <br>
+                  <code class="prettifyHTML">&lt;head>&lt;/head></code> code between these tags are your “meta” information <br>
+                  <code class="prettifyHTML">&lt;meta charset=”utf-8”></code> allows special characters not found on every keyboard. <br>
+                  <code class="prettifyHTML">&lt;body>&lt;/body></code> where your primary code goes. When you were doing CodeCombat, you were
                   always in the <code>&lt;body></code> tag.
                 </p>
 
-                <a id="title"><h2>Title <code>&lt;title&gt;</code></h2></a>
+                <a id="title"><h2><code class="prettifyHTML">&lt;title&gt;</code></h2></a>
                 <p>
                   If you notice on your new page, it says “index.html”.
                   That is rather ugly and unprofessional, thankfully HTML has a quick fix for that.
@@ -321,7 +321,7 @@
                 </div>
                 <br>
                 <p>
-                  <code>&lt;title>&lt;/title></code> is an element that defines what you see on the
+                  <code class="prettifyHTML">&lt;title>&lt;/title></code> is an element that defines what you see on the
                   browser tab. Notice (on the right image), that it now says “<codeB>My Website!</codeB>” instead of
                   “index.html”
                 </p>
