Cleaned upto tables

--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -153,7 +153,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/newfolder.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/newfolder.png"></img>
                       </div>
                     </div>
                   </div>
@@ -169,7 +169,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/firstwebsite.png" alt=""></img>
+                        <img class="tutImage" src="examples/images/firstwebsite.png"></img>
                       </div>
                     </div>
                   </div>
@@ -192,7 +192,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/newtext.PNG" alt=""></img>
+                        <img class="tutImage" src="examples/images/newtext.PNG"></img>
                       </div>
                     </div>
                   </div>
@@ -205,7 +205,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/indexhtml.PNG" alt=""></img>
+                        <img class="tutImage" src="examples/images/indexhtml.PNG"></img>
                       </div>
                     </div>
                   </div>
@@ -229,7 +229,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/openwith.PNG" alt=""></img>
+                        <img class="tutImage" src="examples/images/openwith.PNG"></img>
                       </div>
                     </div>
                   </div>
@@ -240,14 +240,14 @@
                         Find <textR>“Sublime”</textR> and double click it.
                         </br>
                         </br>
-                        <img class="questionmark" src="../questionmark.jpg" alt="">
+                        <img class="questionmark" src="../questionmark.jpg"></img>
                         If you’re having trouble finding it, ask an
                         instructor to help you (it won’t always show here).
                       </p>
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/sublime.PNG" alt=""></img>
+                        <img class="tutImage" src="examples/images/sublime.PNG"></img>
                       </div>
                     </div>
                   </div>
@@ -273,7 +273,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/helloworld.PNG" alt=""></img>
+                        <img class="tutImage" src="examples/images/helloworld.PNG"></img>
                       </div>
                     </div>
                   </div>
@@ -314,7 +314,7 @@
                     </div>
                     <div class="fr">
                       <div class="tutImageContainer">
-                        <img class="tutImage" src="examples/images/helloworldtitle.PNG" alt=""></img>
+                        <img class="tutImage" src="examples/images/helloworldtitle.PNG"></img>
                       </div>
                     </div>
                   </div>
@@ -326,30 +326,25 @@
                   “index.html”
                 </p>
               </section>
-              <!-- ^ Cleaned -->
+
               <section id="section_BODY">
-                <a id="_BODY">
-                  <h2>
-                    <codeG>Body</codeG>
-                  </h2>
-                </a>
-                <p>Now that we have gotten that out of the way, we are going
+                <a id="_BODY"><h2><codeG>Body</codeG></h2></a>
+                <p>
+                  Now that we have gotten that out of the way, we are going
                   to see the many different elements you can add to your website.
                   <strong>Each example will be separate code</strong>​, so don’t worry that what is
-                  done in one section won’t appear in the next…
+                  done in one section won’t appear in the next.
                 </p>
 
-                <a id="headers">
-                  <h2>Headers <code>&lt;h1&gt;</code></h2>
-                </a>
-                <p>Headers are useful in web development for your readers to know when
+                <a id="headers"><h2>Headers <code class="prettifyHTML">&lt;h1&gt;</code></h2></a>
+                <p>
+                  Headers are useful in web development for your readers to know when
                   you’ve moved from one category to the next. There are 6 levels of headers,
                   as they get lower in the level, the smaller they get.
                 </p>
-
-                <h3 class="paraTitle">Header Elements</h3>
+                <h3 class="paraTitle">Header <code class="prettifyHTML">&lt;h1&gt;</code> Elements</h3>
                 <div class="paraSection">
-                  <div class='CodeBoxL '>
+                  <div class='CodeBoxL'>
                     <pre class="prettyprint linenums lang-html CodeBoxBuffer">
 &lt;!DOCTYPE html&gt;
 &lt;html&gt;
@@ -368,28 +363,25 @@
 &lt;/html&gt;</pre>
                   </div>
                   <div class="tutImageContainer">
-                    <img class="tutImage" src="examples/images/headers.PNG" alt=""></img>
+                    <img class="tutImage" src="examples/images/headers.PNG"></img>
                   </div>
                 </div>
                 <br>
                 <p>
                   Remember that your code must be in between the
-                  <code>&lt;body&gt;&lt;/body&gt;</code> tags.
+                  <code class="prettifyHTML">&lt;body&gt;&lt;/body&gt;</code> tags.
                   The best time to use header tags is when you want separate categories,
                   you would follow a header tag with a paragraph tag (covered in next section).
                 </p>
 
-                <a id="paragraphs">
-                  <h2>Paragraphs <code>&lt;p&gt;</code></h2>
-                </a>
+                <a id="paragraphs"><h2>Paragraphs <code class="prettifyHTML">&lt;p&gt;</code></h2></a>
                 <p>
                   Paragraph tags are the most common tag that you will use,
                   as they are a good standard size to write “paragraphs” of information.
                 </p>
-
-                <h3 class="paraTitle">Paragraph Element</h3>
+                <h3 class="paraTitle">Paragraph <code class="prettifyHTML">&lt;p&gt;</code> Element</h3>
                 <div class="paraSection">
-                  <div class='CodeBoxL '>
+                  <div class='CodeBoxL'>
                     <pre class="prettyprint linenums lang-html CodeBoxBuffer">
 &lt;!DOCTYPE html&gt;
 &lt;html&gt;
@@ -398,15 +390,19 @@
     &lt;title&gt;My Website!&lt;/title&gt;
   &lt;/head&gt;
   &lt;body&gt;
-    &lt;p> Hello! I am a paragraph, and I will show you how paragraphs are
-      made to make information easy to read and enjoy! &lt;/p>
-    &lt;p> Notice that I added a sectiond paragraph tag and it pushed me to a
-      new line? &lt;/p>
+    &lt;p>
+      Hello! I am a paragraph, and I will show you how paragraphs are
+      made to make information easy to read and enjoy!
+    &lt;/p>
+    &lt;p>
+      Notice that I added a sectiond paragraph tag and it pushed me to a
+      new line?
+    &lt;/p>
   &lt;/body&gt;
 &lt;/html&gt;</pre>
                   </div>
                   <div class="tutImageContainer">
-                    <img class="tutImage" src="examples/images/paraexample.PNG" alt=""></img>
+                    <img class="tutImage" src="examples/images/paraexample.PNG"></img>
                   </div>
                 </div>
                 <br>
@@ -415,16 +411,14 @@
                   information about it? This is how you should structure your tags when writing websites
                 </p>
 
-                <a id="bolditalicunderline">
-                  <h2><strong>Bold</strong>, <i>Italic</i>, <u>Underline</u></h2>
-                </a>
+                <a id="bolditalicunderline"><h2><strong>Bold</strong>, <i>Italic</i>, <u>Underline</u></h2></a>
                 <p>
                   There are times when you want to add emphasis in your text.
                   That can be bold,​ Italic, underline, and other things.
                 </p>
-                <h3 class="paraTitle">Paragraph Element</h3>
+                <h3 class="paraTitle">Text Styles!</h3>
                 <div class="paraSection">
-                  <div class='CodeBoxL '>
+                  <div class='CodeBoxL'>
                     <pre class="prettyprint linenums lang-html CodeBoxBuffer">
 &lt;!DOCTYPE html&gt;
 &lt;html&gt;
@@ -445,7 +439,7 @@
 &lt;/html&gt;</pre>
                   </div>
                   <div class="tutImageContainer">
-                    <img class="tutImage" src="examples/images/textformatting.PNG" alt=""></img>
+                    <img class="tutImage" src="examples/images/textformatting.PNG"></img>
                   </div>
                 </div>
                 <br>
@@ -454,15 +448,14 @@
                   but these are some of the very common ones.
                 </p>
 
-                <a id="lists">
-                  <h2>Lists <code>&lt;ol&gt;</code></h2>
-                </a>
-                <p>We sometimes want to organize our thoughts in a nice list. An ordered list is when you have
+                <a id="lists"><h2>Lists <code class="prettifyHTML">&lt;ol&gt;</code></h2></a>
+                <p>
+                  We sometimes want to organize our thoughts in a nice list. An ordered list is when you have
                   them numbered, while an unordered list is just a bunch of bullet points.
                 </p>
-                <h3 class="paraTitle">List Element</h3>
+                <h3 class="paraTitle">List <code class="prettifyHTML">&lt;ol&gt;</code> Element</h3>
                 <div class="paraSection">
-                  <div class='CodeBoxL '>
+                  <div class='CodeBoxL'>
                     <pre class="prettyprint linenums lang-html CodeBoxBuffer">
 &lt;!DOCTYPE html&gt;
 &lt;html&gt;
@@ -493,21 +486,22 @@
 &lt;/html&gt;</pre>
                   </div>
                   <div class="tutImageContainer">
-                    <img class="tutImage" src="examples/images/lists.PNG" alt=""></img>
+                    <img class="tutImage" src="examples/images/lists.PNG"></img>
                   </div>
                 </div>
                 <br>
                 <p>
-                  <code> &lt;ul>&lt;/ul></code> list items between these tags will be “unordered”, and they will begin with a bullet
+                  <code class="prettifyHTML"> &lt;ul>&lt;/ul></code> list items between these tags will be “unordered”, and they will begin with a bullet
                   point.
                 </p>
                 <p>
-                  <code>&lt;ol>&lt;/ol></code> list items between these tags will be “ordered”, and they will be numbered starting
+                  <code class="prettifyHTML">&lt;ol>&lt;/ol></code> list items between these tags will be “ordered”, and they will be numbered starting
                   at 1.
                 </p>
                 <p>
-                  <code>&lt;li>&lt;/li></code> list item tags that go in between the ordered or unordered list.
+                  <code class="prettifyHTML">&lt;li>&lt;/li></code> list item tags that go in between the ordered or unordered list.
                 </p>
+                <!-- ^ Cleaned -->
 
                 <a id="tables">
                   <h2>Tables <code>&lt;table&gt;</code></h2>
